0.184

- Match enums case-insensitively in configuration.
- Access logging levels finer than FINE.
- Record complete URI in HTTP request log.
- Handle exceptions from @PreDestroy methods.
- Remove checked exceptions from LifeCycleManager methods.
- Fix @JsonSubTypes support for JsonCodec.
- Allow using localhost for SPNEGO canonical service name in HTTP client.
- Add support for printing Optional values in configuration.
- Use "----" for printing null values in configuration.

0.183

- Fix rare failure when deserializing QuantileDigest instances.

0.182

- Retry SpnegoAuthentication on network related exceptions.
- Allow adding fractional weights to QuantileDigest.
- Show JVM config hint when JMX agent start fails on Java 9+.
- Skip starting JMX agent on Java 9+ if already configured.

0.181

- Fix JAX-RS warning for missing JAXB APIs on Java 9.
- Remove support for non-explicit JAX-RS bindings.
- Add config for HTTP server max response header size.

0.180

- Run life cycle methods on instances from providers.
- Log HTTP server requests even when body is not read.
- Hide HTTP Client's key/trust store passwords from logs.
- Add installModuleIf method to ConditionalModule with ability to
  install module when condition is not met.
- Allow configuring Kerberos GSS name type for HTTP client.
- Exclude tar.gz files from server tarballs.

0.179

- Update to BVal 2.0.0
- Report server port when bind fails in HttpServer.
- Redirect from /resource to /resource/.
- Add future callback overloads that take an executor.
- Allow configuring the HTTP client Kerberos service principal pattern.

0.178

- Limit the size of HTTP server request log by default.
- Prevent ClassPathResourceHandler from using default encoding.
- Make joda-time dependency optional for JSON module.
- Return correct status code from JaxrsTestingHttpProcessor.

0.177

- Update to Jetty 9.4.14.v20181114.

0.176

- Upgrade to Jackson 2.9.7
- Fix extraction of level when deserializing QuantileDigest.

0.175
